Actualizamos una línea index.html como ejemplo del comando pull

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <h1>
         Hola Mundo cruel
     </h1>
+    <p>
+        Esto es un parrafo agregado como una nueva version para practicar el comando pull
+    </p>
 </body>
 
 </html>
